fixed nav and images

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "exif-js": "^2.3.0",
     "gatsby": "^1.9.236",
     "gatsby-cli": "^1.1.48",
+    "gatsby-image": "^1.0.42",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.37",
+    "gatsby-transformer-sharp": "^1.6.22",
     "react-helmet": "^5.2.0",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-react": "^0.79.0"
   },
   "keywords": [
     "gatsby"
