--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "react-helmet": "^5.2.0",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.79.0"
+    "semantic-ui-react": "^0.79.0",
+    "serve": "^6.5.3"
   },
   "keywords": [
     "gatsby"
@@ -28,7 +29,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve public/"
   },
   "devDependencies": {
     "prettier": "^1.11.1"
