--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.37",
     "gatsby-transformer-sharp": "^1.6.22",
+    "react-emojione": "^5.0.0",
     "react-helmet": "^5.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.79.0",
