--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-cli": "^1.1.52",
     "gatsby-image": "^1.0.42",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-remark-images": "^1.5.60",
