--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "author": "Graham Plata <graham.plata@gmail.com>",
   "dependencies": {
     "exif-js": "^2.3.0",
-    "gatsby": "next",
-    "gatsby-cli": "next",
-    "gatsby-image": "next",
-    "gatsby-link": "next",
+    "gatsby": "^2.0.0-beta.111",
+    "gatsby-cli": "^2.0.0-beta.14",
+    "gatsby-codemods": "^1.0.0-beta.2",
+    "gatsby-image": "^2.0.0-beta.8",
+    "gatsby-link": "^2.0.0-beta.22",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-remark-images": "next",
+    "gatsby-plugin-sharp": "^2.0.0-beta.9",
+    "gatsby-remark-images": "^2.0.1-beta.11",
     "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby-transformer-remark": "^2.1.1-beta.7",
+    "gatsby-transformer-sharp": "^2.1.1-beta.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-emojione": "^5.0.0",
@@ -23,7 +24,8 @@
     "react-player": "^1.6.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.79.0",
-    "serve": "^6.5.8"
+    "serve": "^6.5.8",
+    "tunnel-agent": "^0.6.0"
   },
   "keywords": [
     "gatsby"
